#CMAKE最小版本要求,可修改
#CMAKE_BUILD_TYPE=release,debug  UNIT_TEST=true,false
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT("transparent_proxy")
SET(COMEX_MAJOR_VERSION 1)
SET(COMEX_MINOR_VERSION 0)
SET(COMEX_PATCH_VERSION 0)

MESSAGE("CMAKE_SYSTEM_VERSION: ${CMAKE_SYSTEM_VERSION}")
MESSAGE("CMAKE_SYSTEM_PROCESSOR: ${CMAKE_SYSTEM_PROCESSOR}")
MESSAGE("CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
MESSAGE("CMAKE_SYSTEM: ${CMAKE_SYSTEM}")
MESSAGE("CMAKE_LIBRARY_ARCHITECTURE: ${CMAKE_LIBRARY_ARCHITECTURE}")

IF (MSVC)
  ADD_DEFINITIONS("-DWIN32_LEAN_AND_MEAN")
  ADD_DEFINITIONS("-D_WIN32_WINNT=${CMAKE_WIN32_WINNT}")
ENDIF()

IF ("${UNIT_TEST}" STREQUAL "true")
  ADD_DEFINITIONS("-DUNIT_TEST")
ENDIF()

IF ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
  ADD_DEFINITIONS("-D__DEBUG__")
  IF (MSVC)
    ADD_COMPILE_OPTIONS( /MDd)
  ELSE()
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
  ENDIF()
ELSE()
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
  IF (MSVC)
    ADD_COMPILE_OPTIONS( /MD)
  ENDIF()
ENDIF()

set(CMAKE_CXX_STANDARD 11)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c99 -fwrapv")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

#头文件搜索路径,可修改
INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/src
    ${PROJECT_SOURCE_DIR}/../libcom/src/export
	${PROJECT_SOURCE_DIR}/../libcomex/src/export
	${PROJECT_SOURCE_DIR}/../proxy_driver/out/include
)

#库文件搜索路径,可修改
LINK_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/../libcom/out
	${PROJECT_SOURCE_DIR}/../libcomex/out
	${PROJECT_SOURCE_DIR}/../proxy_driver/out/lib
)

SET(PROJECT_LIB
    ${PROJECT_LIB}
    com
	comex
    pthread
    dl
    m
	spsdk
)

AUX_SOURCE_DIRECTORY(./src PROJECT_SRC)
IF ("${UNIT_TEST}" STREQUAL "true")
  AUX_SOURCE_DIRECTORY(./src/test PROJECT_SRC)
ENDIF()

SET(CMAKE_SKIP_BUILD_RPATH FALSE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
IF ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
  SET(CMAKE_INSTALL_RPATH "$ORIGIN:$ORIGIN/lib:$ORIGIN/../../libcom/out:$ORIGIN/../../libcomex/out:$ORIGIN/../../proxy_driver/out")
ELSE()
  SET(CMAKE_INSTALL_RPATH "$ORIGIN:$ORIGIN/lib:$ORIGIN/../../libcom/out:$ORIGIN/../../libcomex/out:$ORIGIN/../../proxy_driver/out")
ENDIF()

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/out/export)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/out)
ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRC})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin COMPONENT dev)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIB})
